--- a/public/admin.html
+++ b/public/admin.html
@@ -11,6 +11,7 @@
 <button id='endVote'>STOP VOTING</button>
 <button id='upload'>Upload Results</button>
 
+<div></div>
 <canvas id="myChart"></canvas>
 
 <script>
