--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <style>
 	body {
 		background-color: #e2e1e0;
+        margin: 0;
+        padding-bottom: 20px;
 	}
 	img {
         object-fit: contain;
@@ -41,7 +43,6 @@
 
     .form {
         margin: 0;
-        padding: 20px;
         width: 100%;
         text-align: center;
     }
@@ -52,17 +53,11 @@
         margin: 20px;
         text-align: center;
         border-radius: 5px;
-        /*border: 1px solid #352384;*/
-        min-width: 100px;
-        max-width: 318px;
+        width: 318px;
+        max-height: 502px;
         background-color: white;
-        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+        box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
         transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-    }
-
-    .image-wrapper:hover {
-    	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-    	cursor: pointer;
     }
 
     .image-container {
@@ -70,6 +65,11 @@
         flex-flow: wrap;
         justify-content: center;
         margin: 0 auto;
+    }
+
+    .image:hover {
+        box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+        cursor: pointer;
     }
 
     .selected {
@@ -86,6 +86,11 @@
         padding: 5px;
     }
 
+    .check-circle:hover {
+        cursor: pointer;
+        box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    }
+
     .success {
         height: 100vh
         width: 100vw;
@@ -97,12 +102,30 @@
     .none {
         display: none;
     }
+
+    #outside {
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background-color: rgba(226,225,224,0.9);
+    }
+
+    #viewer {
+        position: fixed;
+        display: block;
+        max-width: 80vw;
+        max-height: 90vh;
+        margin-top: 3vh;
+    }
 </style>
 
 <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
 <div class="success none">
     <h2>Thanks for voting!</h2>
 </div>
+<div id="outside" class="none"><img id="viewer"></div>
 <div class="form">
     <h1></h1>
     <div id="image-container"></div>
@@ -158,6 +181,7 @@
 
                 // add the image to the element
 				const imageNode = document.createElement('img')
+                $(imageNode).addClass('image');
 				imageNode.src = file.webContentLink;
                 wrapper.appendChild(imageNode);
 
@@ -180,11 +204,27 @@
 	});
 
     const attachHandlers = function() {
-        $('.image-wrapper').click(handleImageClick);
+        $('.check-circle').click(handleCheckMarkClick);
+        $('.image').click(toggleViewer);
     };
 
-    const handleImageClick = function() {
-        const el = $(this);
+    const toggleViewer = function() {
+        const imageUrl = $(this)[0].src;
+        $('#outside').toggleClass('none');
+        if (!!imageUrl) {
+            const viewer = $('#viewer');
+            viewer.attr('src', imageUrl);
+
+            const w = $(window).width();
+            const divW = viewer.width();
+            viewer.css("left", `${(w/2)-(divW/2)}px`);
+        }
+    }
+
+    $('#outside').click(toggleViewer);
+
+    const handleCheckMarkClick = function() {
+        const el = $(this).parent();
         const isSelected = el.hasClass('selected');
         if (isSelected) {
             unselectImage(el);
@@ -192,7 +232,6 @@
             selectImage(el);
         }
     }
-
 
     const selectImage = function(el) {
         el.addClass('selected');
