--- a/public/index.html
+++ b/public/index.html
@@ -155,6 +155,9 @@
         $.ajax(settings).then(() => {
         	$('.form').toggleClass('none');
         	$('.success').toggleClass('none');
+        }).catch(error => {
+            console.log('Voting failed');
+            alert(error.responseText)
         });
     }
 
@@ -171,7 +174,6 @@
         $('h1').html(`${heading} ${dateString}`);
 
 		$.get('/list').then(data => {
-            // for (var i = 1; i < 25 /* data.files.length - 1 */; i++) {
             for (var i = 1; i < data.files.length - 1; i++) {
                 const file = data.files[i];
 
